fixed overflowing issue

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
   padding: 2rem 1.5rem;
   text-align: center;
   margin-top: 5rem;
-  min-width: 400px;
+  width: 400px;
   background-color: white;
   color: black;
 }
